# OPTCGGraph

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  OPTCG-Knowledge-Graph-PRD-EN.md  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: backend-dev.md  build-error-resolver.md  code-reviewer.md  data-pipeline.md  devops.md  frontend-dev.md  security-reviewer.md  test-runner.md
.claude/commands/: validate-deck.md
.claude/skills/: optcg-deck-validator.md
backend/: CLAUDE.md  config.py  main.py
backend/agent/: ag_ui.py  loop.py  providers.py  router.py  runtime.py  session.py  tool_executor.py  tools.py  tracer.py  types.py
backend/ai/: deck_builder.py  deck_suggestions.py  deck_validator.py  draw_probability.py  game_rules.py  playstyle_analyzer.py
backend/api/: deps.py  models.py  routes_ai.py  routes_data.py  routes_deck.py  routes_graph.py  routes_meta.py  routes_settings.py  routes_simulator.py
backend/core/: __init__.py  config.py  dependencies.py  exceptions.py
backend/crawlers/: apitcg.py  bandai.py  banned_cards.py  families.py  limitlesstcg.py  merge.py  optcgapi.py  tracer.py
backend/graph/: batch.py  builder.py  connection.py  edges.py  queries.py
backend/parser/: ability_parser.py  keywords.py  prompts.py
backend/repositories/: __init__.py  card_repository.py  deck_repository.py  meta_repository.py  session_repository.py
backend/scripts/: crawl_decks.py  full_crawl.py  parse_abilities.py  rebuild_edges.py  update_prices.py
backend/services/: deck_service.py  graph_service.py  llm_service.py  meta_service.py  settings_service.py
backend/simulator/: __init__.py  (+8 more)
frontend/: CLAUDE.md  index.html  package-lock.json  package.json
scripts/: parallel-claude.sh
tests/: test_deck_intelligence.py  test_simulator_engine.py
worklogs/: 2026-03-29-claude-code-setup.md  2026-03-29-full-implementation.md  TEMPLATE.md
(+178 files in other folders)
